--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -53,7 +53,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="16dp"
-        app:cardElevation="4dp">
+        app:cardElevation="4dp"
+        android:layout_marginBottom="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -80,12 +81,41 @@
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 
-    <!-- Alert summary -->
-    <TextView
-        android:id="@+id/tv_alerts"
-        android:layout_width="wrap_content"
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Alerts: --"
-        android:textStyle="italic"/>
+        app:cardCornerRadius="16dp"
+        app:cardElevation="4dp"
+        android:layout_marginBottom="8dp">
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="16dp"
+            android:weightSum="2">
+
+
+        <!-- Alert summary -->
+        <TextView
+            android:id="@+id/tv_alerts"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Alerts: --"
+            android:textStyle="italic"
+            android:layout_weight="1"/>
+
+        <!-- Connection summary -->
+        <TextView
+            android:id="@+id/tv_connection_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Connection: --"
+            android:textStyle="italic"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
+    </com.google.android.material.card.MaterialCardView>
 </LinearLayout>
