--- a/app/src/main/res/layout/fragment_analytics.xml
+++ b/app/src/main/res/layout/fragment_analytics.xml
@@ -17,32 +17,21 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="16dp" />
 
-    <!-- Time range filter -->
-    <RadioGroup
-        android:id="@+id/rg_time_filter"
-        android:layout_width="match_parent"
+    <!-- Label for datatype spinner -->
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center">
+        android:text="Select Data to Display"
+        android:layout_gravity="center_horizontal"/>
 
-        <RadioButton
-            android:id="@+id/rb_day"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Day" />
-
-        <RadioButton
-            android:id="@+id/rb_week"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Week" />
-
-        <RadioButton
-            android:id="@+id/rb_month"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Month" />
-    </RadioGroup>
+    <!-- Spinner to select the data type -->
+    <Spinner
+        android:id="@+id/spinner_data_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="16dp"
+        android:minHeight="48dp"/>
 
     <!-- Chart -->
     <com.github.mikephil.charting.charts.LineChart
