feat: Add chart animations and Hebrew localization
- Implements smooth bar chart animations using `ValueAnimator` to animate value changes.
- Refactors the chart update logic to support animation and stores the last value for each chart.
- Adds Hebrew (iw) translations for UI strings.
- Updates the color palette for the charts to a softer set of colors.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <!-- Chart Colors -->
-    <color name="chart_temperature">#FF0000</color> <!-- Red -->
-    <color name="chart_ph">#0000FF</color>         <!-- Blue -->
-    <color name="chart_oxygen">#008000</color>    <!-- Green -->
-    <color name="chart_water_level">#00FFFF</color>
+    <color name="chart_temperature">#ED8989</color>
+    <color name="chart_ph">#F0DF83</color>
+    <color name="chart_oxygen">#C4F296</color>
+    <color name="chart_water_level">#80D6F2</color>
 
 </resources>
